[tool.poetry]
name = "basic-python-env"
version = "0.1.0"
description = "A basic Python environment to wrangle data with Python"
authors = ["Felix Haba"]
readme = "README.md"
packages = [{include = "basic_python_env"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
jupyterlab = "^3.4.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
googlesearch-python = "^1.1.0"
selenium = "^4.8.2"
python-dotenv = "^1.0.0"
openai = "^0.27.2"
pyperclip = "^1.8.2"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
pyxlsb = "^1.0.10"
xlwt = "^1.3.0"
pyarrow = "^11.0.0"



[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
