[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "TODO: Describe project"
authors = ["Felix Haba"]
readme = "README.md"
packages = [{include = "project_name"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.22.0"
jupyterlab = "^3.4.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
